fix zoo.cfg rendering

--- a/zookeeper/conf/zoo.cfg
+++ b/zookeeper/conf/zoo.cfg
@@ -46,8 +46,7 @@ maxClientCnxns={{ max_client_cnxns }}
 {% if zookeepers|length() == 1 %}
 clientPortAddress={{ bind_address }}
 {%- else %}
-{%- for garbage_string in zookeepers %}
-{%- set myid, mynodename = garbage_string.split('+') %}
+{%- for mynodename, myid in zookeepers.items() %}
 server.{{ myid }}={{ mynodename }}:2888:3888
 {%- endfor %}
 {%- endif %}
